cluster-talos/kubernetes/apps/nzbget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: nzbget
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  hostnames:
    - nzbget.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
        backendRequest: 3600s
      backendRefs:
        - name: nzbget
          port: 6789
